[tool.poetry]
name = "steganossaurus"
version = "0.1.0"
description = ""
authors = ["Joao Vitor Maia <maia.tostring@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.5.2"
numpy = "^1.19.1"
imageio = "^2.9.0"
matplotlib = "^3.3.1"
click = "^7.1.2"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
